--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-ts-typewriter": "^0.1.8-b",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
